# zdd_casino

./: .gitignore  CODE_OF_CONDUCT.md  LICENSE  README.md  pyproject.toml
.github/workflows/: main.yml
tests/: test_main_classes.py  test_main_functions.py  test_my_module.py
zdd_casino/: __init__.py  main_classes.py  main_functions.py  my_module.py
